# nekops

./: .gitignore  .prettierignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  shell.html  tsconfig.json  vite.config.ts
.github/workflows/: build-artifacts.yml
src/: App.tsx  Layout.tsx  app.tsx  layout.tsx  main.tsx  router.tsx  routes.ts  shell.tsx  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: base.json  fs-all.json  main-window.json  shell-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/common/: actionStyles.ts
src/components/: AboutModal.tsx  AccordionDeleteItemButton.tsx  CopyButton.tsx  DeleteItemButton.tsx  EditSnippetModal.tsx  GroupDivider.tsx  Header.tsx  Nav.tsx  SearchBar.tsx  ServerCard.tsx  ServerCardModal.tsx  ServerCardsVirtualScroll.tsx  TabStateIcon.tsx  UnlockModal.tsx  editServerModal.module.css  editServerModal.tsx  header.tsx  nav.tsx  notificationCenter.tsx
src/encrypt/: config.ts  helper.ts  keyHandler.ts  methods.ts
src/events/: name.ts  payload.ts
src/icons/: CPU.tsx  RAM.tsx  SSD.tsx
src/notifications/: shell.tsx
src/pages/: Analysis.tsx  Home.tsx  Multirun.tsx  Rescue.tsx  SSH.tsx  Servers.tsx  Settings.tsx  Snippets.tsx  auth.tsx  home.tsx  multirun.tsx  rescue.tsx  servers.tsx  settings.tsx  snippets.tsx  ssh.tsx
src/search/: servers.ts  snippets.ts
src/shell/: ShellBackground.tsx  ShellTabs.tsx  ShellTerminal.tsx  startDummy.ts  startSSH.ts  style.css
src/slices/: common.ts  connectHistorySlice.ts  encryptionSlice.ts  (+3 more)
(+53 files in other folders)
