[package]
name = "nekops"
version = "0.0.0"
description = "Nekops"
authors = ["Nya Candy"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nekops_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.24", features = [] }
# tauri-plugin-window = "2.0.0-alpha.2"
tauri-plugin-shell = "2.0.0-beta.9"
tauri-plugin-fs = "2.0.0-beta.11"
tauri-plugin-clipboard-manager = "2.1.0-beta.6"
tauri-plugin-dialog = "2.0.0-beta.11"
# tauri-plugin-single-instance = "2.0.0-beta.11"
serde = "1.0"
serde_json = "1.0"
enigo = "0.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
